--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "use-streak": "^1.0.4",
     "uuid": "^8.3.2",
     "wagmi": "^0.4.3",
-    "zod": "^3.17.3"
+    "zod": "^3.17.3",
+    "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^2.6.2",
